--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "node generate-content.js && vite dev",
-		"build": "node generate-content.js && vite build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"generate-content": "node generate-content.js"
+		"generate-content": "bun run generate-content.ts"
 	},
 	"devDependencies": {
+		"@humanspeak/svelte-markdown": "^0.8.10",
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-node": "^5.3.1",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/bun": "^1.2.20",
 		"glob": "^11.0.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
