--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "bun run generate-content.ts && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,16 +14,16 @@
 	},
 	"devDependencies": {
 		"@humanspeak/svelte-markdown": "^0.8.10",
-		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-node": "^5.3.1",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@sveltejs/kit": "^2.31.1",
+		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@types/bun": "^1.2.20",
 		"glob": "^11.0.3",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"svelte": "^5.38.1",
+		"svelte-adapter-bun": "^0.5.2",
+		"svelte-check": "^4.3.1",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.2"
 	},
 	"dependencies": {
 		"gray-matter": "^4.0.3",
