--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "bun run generate-content.ts && vite build",
+		"test": "bun vitest tests --run",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"generate-content": "bun run generate-content.ts"
 	},
 	"devDependencies": {
