--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
 		"@sveltejs/adapter-node": "^5.3.1",
 		"@sveltejs/kit": "^2.31.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.2",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/svelte": "^5.2.8",
 		"@types/bun": "^1.2.20",
 		"glob": "^11.0.3",
+		"jsdo": "^4.3.12",
+		"jsdom": "^27.0.0",
 		"svelte": "^5.38.1",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.3.1",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.2"
+		"vite": "^7.1.2",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"gray-matter": "^4.0.3",
